new strings and info for settings page. all platforms now use prefs folder for scripts folder location.

--- a/ExecuteScript/HTML/EN/plugins/ExecuteScript/settings/basic.html
+++ b/ExecuteScript/HTML/EN/plugins/ExecuteScript/settings/basic.html
@@ -3,6 +3,11 @@
 	<div class="settingSection">
 		<div class="groupHead">[% "PLUGIN_EXECUTE_SCRIPT" | string | upper %]</div>
 		<div class="groupDesc">[% "PLUGIN_GROUP_EXECUTE_DESC" | string %]</div>
+		<div class="groupDesc">[% "PLUGIN_EXECUTE_PLAYERSETUP_DESC" | string %]</div>
+		
+		[% IF scriptPath %]
+		<div class="groupDesc">[% "PLUGIN_EXECUTE_SCRIPTPATH" | string %][% scriptPath %]</div>
+		[% END %]
 	</div>
 	
 	[% FOREACH thispref = prefs %]
